--- a/CoreMVC5_UsedBookProject/Views/Shared/_Layout.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                 <div class="search-menu">
                     <form class="form-inline my-2 my-lg-0 flex-grow-1 px-2" action="~/Home/SearchProductbyName" method="get">
                         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="name">
-                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">輸入書名或ISBN</button>
                     </form>
                     
                 </div>
