--- a/CoreMVC5_UsedBookProject/Views/Shared/_Layout.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_Layout.cshtml
@@ -29,9 +29,9 @@
                 <label for="switch-search" class="mb-0 search"><i class="bi bi-search hamber-i"></i></label><!--漢堡按鈕圖示-->
                 <input type="checkbox" id="switch-search" class="d-none" style="position: absolute; top: 0; left: 0;">
                 <div class="search-menu">
-                    <form class="form-inline my-2 my-lg-0 flex-grow-1 px-2" action="~/Home/SearchProductbyName" method="get">
-                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="name">
-                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">輸入書名或ISBN</button>
+                    <form class="form-inline flex-grow-1 px-2" action="~/Home/SearchProductbyName" method="get">
+                        <input class="form-control mr-sm-2" type="search" placeholder="輸入書名或ISBN" aria-label="Search" name="name">
+                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">搜尋</button>
                     </form>
                     
                 </div>
