--- a/CoreMVC5_UsedBookProject/Views/Buyer/Details.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Buyer/Details.cshtml
@@ -17,11 +17,61 @@
         <br />
         @if(Model.Trade == "金錢")
         {
-            <button type="submit">購買</button>
+         
+            <!-- Button trigger modal -->
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#staticBackdrop">
+                購買
+            </button>
+
+            <!-- Modal -->
+            <div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="staticBackdropLabel" style="color:red">確認一下!!</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            確認要送出訂單?
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
+                            <a href="@Url.Action("CreateOrder", "Buyer", new {ProductId=Model.ProductId})" class="btn btn-primary">確認</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         }
         else if (Model.Trade == "以物易物")
         {
-            <button type="submit">交換</button>
+            
+            <!-- Button trigger modal -->
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#staticBackdrop">
+                交換
+            </button>
+
+            <!-- Modal -->
+            <div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="staticBackdropLabel" style="color:red">確認一下!!</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            確認要送出訂單?
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
+                            <a href="@Url.Action("CreateOrder", "Buyer", new {ProductId=Model.ProductId})" class="btn btn-primary">確認</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         }
         
         
