--- a/CoreMVC5_UsedBookProject/Views/Home/SearchProductbyName.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Home/SearchProductbyName.cshtml
@@ -1,5 +1,4 @@
-﻿@using CoreMVC5_UsedBookProject.ViewModel;
-@model MyProductsViewModel
+﻿@model MyProductsViewModel
 @{
     ViewData["Title"] = "Home Page";
 }
