--- a/CoreMVC5_UsedBookProject/Views/Shared/_NowPageMySales.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_NowPageMySales.cshtml
@@ -1,8 +1,4 @@
-﻿@using CoreMVC5_UsedBookProject.ViewModel;
-@model MySalesViewModel
-@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model MySalesViewModel
 @{
     var route = ViewContext.RouteData;
     string controller = route.Values["controller"] != null ? route.Values["controller"].ToString() : "";
