--- a/CoreMVC5_UsedBookProject/Views/_ViewStart.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/_ViewStart.cshtml
@@ -12,7 +12,11 @@
     }
     else if (controller == "AdministratorHomePage")
     {
-        Layout = "_LayoutAdminHomePage";
+        Layout = "Home";
+    }
+    else if (controller == "AdministratorProfile")
+    {
+        Layout = "AdministratorData";
     }
     else
     {
