--- a/CoreMVC5_UsedBookProject/Views/AdministratorProfile/AdministratorCreate.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/AdministratorProfile/AdministratorCreate.cshtml
@@ -13,6 +13,11 @@
         <form asp-action="AdministratorCreate">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+                <label asp-for="Id" class="control-label"></label>
+                <input asp-for="Id" class="form-control" />
+                <span asp-validation-for="Id" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
@@ -40,7 +45,7 @@
 </div>
 
 <div>
-    <a asp-action="AdministratorHomePage">返回管理員控制中心</a>
+    <a asp-controller="AdministratorHomePage" asp-action="Home">返回管理員控制中心</a>
 </div>
 
 @section Scripts {
