--- a/CoreMVC5_UsedBookProject/Views/Seller/Create.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/Create.cshtml
@@ -1,5 +1,4 @@
-﻿@using CoreMVC5_UsedBookProject.ViewModel;
-@model ProductCreateViewModel
+﻿@model ProductCreateViewModel
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
