--- a/CoreMVC5_UsedBookProject/Views/Seller/DetailTablePartial/OtherInformation.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/DetailTablePartial/OtherInformation.cshtml
@@ -1,5 +1,4 @@
-﻿@using CoreMVC5_UsedBookProject.ViewModel;
-@model ProductEditViewModel
+﻿@model ProductEditViewModel
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
