--- a/CoreMVC5_UsedBookProject/Views/_ViewImports.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using CoreMVC5_UsedBookProject
 @using CoreMVC5_UsedBookProject.Models
+@using CoreMVC5_UsedBookProject.ViewModels;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
