--- a/CoreMVC5_UsedBookProject/Views/Seller/Create.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/Create.cshtml
@@ -9,7 +9,7 @@
 
 <div class="container-fluid">
     <h1>新增商品</h1>
-    <form action="~/Seller/Create" method="post" enctype="multipart/form-data" onsubmit="event.preventDefault(); validateMyForm();">
+    <form action="~/Seller/Create" method="post" enctype="multipart/form-data">
         <partial name="~/Views/Seller/CreateTablePartial/ProductInformation.cshtml" />
         <partial name="~/Views/Seller/CreateTablePartial/ProductImage.cshtml" />
         <partial name="~/Views/Seller/CreateTablePartial/SaleInformation.cshtml" />
