Revert "準備覆蓋用"
This reverts commit 1cb962b7f6388f29a279a891913e6cbe5f3e5527.

--- a/CoreMVC5_UsedBookProject/Views/Home/SearchProductbyName.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Home/SearchProductbyName.cshtml
@@ -1,4 +1,5 @@
-﻿@model MyProductsViewModel
+﻿@using CoreMVC5_UsedBookProject.ViewModel;
+@model MyProductsViewModel
 @{
     ViewData["Title"] = "Home Page";
 }
