--- a/CoreMVC5_UsedBookProject/Views/_ViewStart.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/_ViewStart.cshtml
@@ -12,11 +12,7 @@
     }
     else if (controller == "AdministratorHomePage")
     {
-        Layout = "Home";
-    }
-    else if (controller == "AdministratorProfile")
-    {
-        Layout = "AdministratorData";
+        Layout = "_LayoutAdminHomePage";
     }
     else
     {
