--- a/CoreMVC5_UsedBookProject/Views/Account/Details.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Account/Details.cshtml
@@ -1,7 +1,10 @@
 ﻿@using System.Security.Claims
+@using CoreMVC5_UsedBookProject.ViewModels;
 @model UserViewModel
+@*
+    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
+*@
 @{
-
 }
 <div class="container-fluid pb-5 gap-10px">
     <h1>我的資訊</h1>
