--- a/CoreMVC5_UsedBookProject/Views/AdministratorHomePage/AdministratorEdit.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/AdministratorHomePage/AdministratorEdit.cshtml
@@ -28,14 +28,14 @@
                 <span asp-validation-for="Nickname" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PhoneNo" class="control-label"></label>
-                <input asp-for="PhoneNo" class="form-control" />
-                <span asp-validation-for="PhoneNo" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="PhoneNo" class="control-label"></label>
+                <input asp-for="PhoneNo" class="form-control" />
+                <span asp-validation-for="PhoneNo" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
@@ -45,7 +45,7 @@
 </div>
 
 <div>
-    <a asp-controller="AdministratorHomePage" asp-action="Home">返回管理員控制中心</a>
+    <a asp-action="AdministratorHomePage">返回管理員控制中心</a>
 </div>
 
 @section Scripts {
