--- a/CoreMVC5_UsedBookProject/Views/Seller/CreateTablePartial/SaleInformation.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/CreateTablePartial/SaleInformation.cshtml
@@ -1,4 +1,5 @@
-﻿@model ProductCreateViewModel
+﻿@using CoreMVC5_UsedBookProject.ViewModel;
+@model ProductCreateViewModel
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
