--- a/CoreMVC5_UsedBookProject/Views/Seller/DetailTablePartial/ProductInformation.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/DetailTablePartial/ProductInformation.cshtml
@@ -1,4 +1,5 @@
-﻿@model ProductEditViewModel
+﻿@using CoreMVC5_UsedBookProject.ViewModel;
+@model ProductEditViewModel
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
