--- a/CoreMVC5_UsedBookProject/Views/Shared/_LayoutAdminHomePage.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_LayoutAdminHomePage.cshtml
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link href="~/css/buttons.css" rel="stylesheet" />
-    <link href="~/css/AdiminHome.css" rel="stylesheet" />
 </head>
 <body>
     <header>
@@ -38,6 +37,9 @@
     </div>
     <footer class="border-top footer text-muted">
         <div class="container-footer">
+            <div class="container">
+                &copy; 2023 - CoreMVC5_UsedBookProject - <a asp-area="" asp-controller="Home" asp-action="Privacy">隱私中心</a>
+            </div>
             <div class="nav-item-btn buttonpartial">
                 <partial name="_AdminLoginStatusPartial" />
             </div>
