--- a/CoreMVC5_UsedBookProject/Views/Shared/_NowPageMyProducts.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_NowPageMyProducts.cshtml
@@ -1,4 +1,5 @@
-﻿@model MyProductsViewModel
+﻿@using CoreMVC5_UsedBookProject.ViewModel;
+@model MyProductsViewModel
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
