--- a/CoreMVC5_UsedBookProject/Views/Shared/_NowPageMySales.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_NowPageMySales.cshtml
@@ -1,4 +1,8 @@
-﻿@model MySalesViewModel
+﻿@using CoreMVC5_UsedBookProject.ViewModel;
+@model MySalesViewModel
+@*
+    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
+*@
 @{
     var route = ViewContext.RouteData;
     string controller = route.Values["controller"] != null ? route.Values["controller"].ToString() : "";
