--- a/CoreMVC5_UsedBookProject/Views/Account/ChangeUserInfo.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Account/ChangeUserInfo.cshtml
@@ -18,7 +18,7 @@
                         <button type="button" class="btn btn-danger d-block ml-5" id="Image1-clear">X</button>
                     </div>
                     <div id="img1Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background: white; border: 1px solid black; overflow: hidden;">
-                        <img src="../Images/Users/@Model.Id/@Model.UserIcon" alt="img1" id="img1" onerror="errorLoad(this)">
+                        <img src="../Images/Users/@Model.Id/@Model.UserIcon" asp-append-version="true" alt="img1" id="img1" onerror="errorLoad(this)">
                     </div>
                     <div class="d-flex align-items-end mt-2">
                         <label for="file1" class="btn btn-primary">
