--- a/CoreMVC5_UsedBookProject/Views/Shared/_AsidePartial.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_AsidePartial.cshtml
@@ -13,15 +13,18 @@
     <li class="list-unstyled aside-link">
         <a class="text-left pl-2 py-3 d-block mb-0 text-decoration-none" href="@Url.Action("Index", "Home", new {})">主首頁</a>
     </li>
-    <li class="list-unstyled aside-link">
-        <a class="text-left pl-2 py-3 d-block mb-0 text-decoration-none" href="@Url.Action("Index", "Buyer", new {trade = "金錢"})">賣場(金錢)</a>
-    </li>
-    <li class="list-unstyled aside-link">
-        <a class="text-left pl-2 py-3 d-block mb-0 text-decoration-none" href="@Url.Action("Index", "Buyer", new {trade = "以物易物"})">賣場(以物易物)</a>
-    </li>
-    <li class="list-unstyled aside-link">
-        <a class="text-left pl-2 py-3 d-block mb-0 text-decoration-none" href="@Url.Action("Index", "Seller", new {})">賣家中心</a>
-    </li>
+    @if (controller == "Home" || controller == "Buyer")
+    {
+        <li class="list-unstyled aside-link">
+            <a class="text-left pl-2 py-3 d-block mb-0 text-decoration-none" href="@Url.Action("Index", "Buyer", new {trade = "金錢"})">賣場(金錢)</a>
+        </li>
+        <li class="list-unstyled aside-link">
+            <a class="text-left pl-2 py-3 d-block mb-0 text-decoration-none" href="@Url.Action("Index", "Buyer", new {trade = "以物易物"})">賣場(以物易物)</a>
+        </li>
+        <li class="list-unstyled aside-link">
+            <a class="text-left pl-2 py-3 d-block mb-0 text-decoration-none" href="@Url.Action("Index", "Seller", new {})">賣家中心</a>
+        </li>
+    }
     @if (controller == "Seller")
     {
         <li class="list-unstyled aside-text">
