按鈕介面更新

--- a/CoreMVC5_UsedBookProject/Views/_ViewStart.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/_ViewStart.cshtml
@@ -10,9 +10,13 @@
     {
         Layout = "_LayoutAdminLogin";
     }
+    else if (controller == "AdministratorProfile")
+    {
+        Layout = "_LayoutAdministratorProfile";
+    }
     else if (controller == "AdministratorHomePage")
     {
-        Layout = "_LayoutAdminHomePage";
+        Layout = "_LayoutAdministratorHomePage";
     }
     else
     {
