--- a/CoreMVC5_UsedBookProject/Views/Shared/_LayoutAdministratorHomePage.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_LayoutAdministratorHomePage.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link href="~/css/buttons.css" rel="stylesheet" />
+    <link href="~/css/AdminHome.css" rel="stylesheet" />
 </head>
 <body>
     <header>
