viewmodels  namespace fix

--- a/CoreMVC5_UsedBookProject/Views/Buyer/Index.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Buyer/Index.cshtml
@@ -1,4 +1,4 @@
-﻿﻿@using CoreMVC5_UsedBookProject.ViewModel;
+﻿﻿@using CoreMVC5_UsedBookProject.ViewModels;
 @model MyProductsViewModel
 @{
     ViewData["Title"] = "Home Page";
