--- a/CoreMVC5_UsedBookProject/Views/Home/Index.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿﻿@using CoreMVC5_UsedBookProject.ViewModel;
+﻿﻿@using CoreMVC5_UsedBookProject.ViewModels;
 @model MyProductsViewModel
 @{
     ViewData["Title"] = "Home Page";
