--- a/CoreMVC5_UsedBookProject/Views/Shared/_Layout.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap-icons/font/bootstrap-icons.css">
     <link href="~/css/buttons.css" rel="stylesheet" />
     <link href="~/css/seller/all.css" asp-append-version="true" rel="stylesheet" />
+    <script src="~/js/seller/errorimg.js" asp-append-version="true"></script>
     @RenderSection("topCSS",required:false)
     @RenderSection("topJS", required: false)
 </head>
