--- a/CoreMVC5_UsedBookProject/Views/AdministratorProfile/AdministratorDelete.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/AdministratorProfile/AdministratorDelete.cshtml
@@ -44,7 +44,7 @@
     </dl>
     
     <form asp-action="AdministratorDelete">
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="AdministratorHomePage">返回管理員控制中心</a>
+        <input type="submit" value="刪除" class="btn btn-danger" /> |
+        <a asp-controller="AdministratorProfile" asp-action="AdministratorData">返回管理員資料列表</a>
     </form>
 </div>
