--- a/CoreMVC5_UsedBookProject/Views/AdministratorHomePage/AdministratorHome.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/AdministratorHomePage/AdministratorHome.cshtml
@@ -9,7 +9,7 @@
             <a asp-controller="AdministratorHomePage" asp-action="AdministratorHome" class="navtext" style="background-color: white; color:black;">管理員人員名單</a>
         </li>
         <li class="menu-item">
-            <a asp-controller="AdministratorProfile" asp-action="AdministratorData" class="navtext">管理員人員名單</a>
+            <a asp-controller="AdministratorProfile" asp-action="AdministratorData" class="navtext">管理人員控管</a>
         </li>
         <li class="menu-item">
             <a href="#" class="navtext">按鈕3</a>
@@ -41,6 +41,7 @@
                     string username = segmentation[0];
 
                     <h2>你好: @username 歡迎來到管理員控制中心</h2>
+                    <partial name="~/views/administratorhomepage/detailcard.cshtml"></partial>
                 }
             </div>
         </div>
