移除viewmodel namespace ,分離details home buyer

--- a/CoreMVC5_UsedBookProject/Views/Buyer/MySales.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Buyer/MySales.cshtml
@@ -53,7 +53,7 @@
     {
         <h2 class="text-center my-5">沒有符合的商品</h2>
     }
-    <partial name="_NowPageMySales" />
+    <partial name="_NowPageMySalesPartial" />
 </div>
 @section topCSS{
     <link href="~/css/seller/mysales.css" asp-append-version="true" rel="stylesheet" />
