--- a/CoreMVC5_UsedBookProject/Views/Seller/MyProducts.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/MyProducts.cshtml
@@ -133,7 +133,7 @@
     else{
         <h2 class="text-center my-5">沒有符合的商品</h2>
     }
-    <partial name="_NowPageMyProducts" />
+    <partial name="_NowPageMyProductsPartial" />
 </div>
 @section topCSS{
     <link href="~/css/seller/myproducts.css" asp-append-version="true" rel="stylesheet" />
