--- a/CoreMVC5_UsedBookProject/Views/Home/ProductsList.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Home/ProductsList.cshtml
@@ -1,8 +1,9 @@
-﻿@using CoreMVC5_UsedBookProject.ViewModels;
+﻿﻿@using CoreMVC5_UsedBookProject.ViewModels;
 @model MyProductsViewModel
 @{
     ViewData["Title"] = "Home Page";
 }
+
 <div class="container-fluid">
     <p>@ViewBag.Count</p>
     <div class="row py-2">
@@ -16,11 +17,11 @@
                             <h5 class="card-title">@item.Title</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                         </div>
-                      
+
                         <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; background-color: white; max-width: 200px;">
 
                             <a href="@Url.Action("Details", "Home", new {ProductId=@item.ProductId})" style="width: 100%; aspect-ratio: 1 / 1; background-color: white; max-width: 200px;"><img src="../Images/Products/@item.ProductId/@item.Image1" class="m-auto w-100" alt="@item.Title" onerror="errorLoad(this)" /></a>
-                          
+
                         </div>
                         @if (item.Trade == "金錢")
                         {
@@ -47,7 +48,7 @@
 
 
                             </table>
-                            
+
                         }
 
                     </div>
@@ -56,11 +57,11 @@
         }
     </div>
 </div>
-   
-    
+
+
 @section topCSS{
     <link href="~/css/seller/myproducts.css" rel="stylesheet" />
 }
 @section endJS{
-    
+
 }
