--- a/CoreMVC5_UsedBookProject/Views/AdministratorProfile/AdministratorDetail.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/AdministratorProfile/AdministratorDetail.cshtml
@@ -10,7 +10,12 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">@Html.DisplayNameFor(m => m.Name)</dt>
-        <dd class="col-sm-9">@Html.DisplayFor(m => m.Name)</dd>
+        @{
+            string email = User.Identity.Name;
+            string[] segmentation = email.Split('@');
+            string username = segmentation[0];
+        }
+        <dd class="col-sm-9">@Html.DisplayFor(model => username)</dd>
         <dt class="col-sm-2">@Html.DisplayNameFor(m => m.Nickname)</dt>
         <dd class="col-sm-9">@Html.DisplayFor(m => m.Nickname)</dd>
         <dt class="col-sm-2">@Html.DisplayNameFor(m => m.Email)</dt>
