--- a/CoreMVC5_UsedBookProject/Views/Seller/Index.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/Index.cshtml
@@ -17,7 +17,7 @@
         </div>
         <div class="col-4 px-1 my-1">
             <div class="py-2" style="background-color: #80808025;">
-                <p class="text-center">@Model[0]["已完成"]</p>
+                <p class="text-center">@Model[0]["已成立"]</p>
                 <p class="text-center">已處理訂單</p>
             </div>
         </div>
@@ -38,7 +38,7 @@
         </div>
         <div class="col-4 px-1 my-1">
             <div class="py-2" style="background-color: #80808025;">
-                <p class="text-center">@Model[1]["已完成"]</p>
+                <p class="text-center">@Model[1]["已成立"]</p>
                 <p class="text-center">已處理訂單</p>
             </div>
         </div>
