--- a/CoreMVC5_UsedBookProject/Views/Seller/MySales.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/MySales.cshtml
@@ -19,8 +19,12 @@
             <span style="color: red;">@Model.OrdersCount["待確認"] </span>
         </li>
         <li class="nav-item d-flex">
-            <a href="@Url.Action("MySales", "Seller", new {status = "已完成", trade = ViewBag.trade})" class="text-decoration-none" style="@(Model.StatusPage == "已完成" ? "color: red; border-bottom: 2px solid red;" : "")">已完成</a>
-            <span style="color: red;">@Model.OrdersCount["已完成"] </span>
+            <a href="@Url.Action("MySales", "Seller", new {status = "已成立", trade = ViewBag.trade})" class="text-decoration-none" style="@(Model.StatusPage == "已成立" ? "color: red; border-bottom: 2px solid red;" : "")">已成立</a>
+            <span style="color: red;">@Model.OrdersCount["已成立"] </span>
+        </li>
+        <li class="nav-item d-flex">
+            <a href="@Url.Action("MySales", "Seller", new {status = "不成立", trade = ViewBag.trade})" class="text-decoration-none" style="@(Model.StatusPage == "不成立" ? "color: red; border-bottom: 2px solid red;" : "")">不成立</a>
+            <span style="color: red;">@Model.OrdersCount["不成立"] </span>
         </li>
         <li class="nav-item d-flex">
             <a href="@Url.Action("MySales", "Seller", new {status = "待取消", trade = ViewBag.trade})" class="text-decoration-none" style="@(Model.StatusPage == "待取消" ? "color: red; border-bottom: 2px solid red;" : "")">待取消</a>
@@ -40,11 +44,19 @@
                     <tr><td>@Html.DisplayNameFor(model => model.Order.BuyerId)</td><td>@item.BuyerId</td></tr>
                     <tr><td>@Html.DisplayNameFor(model => model.Order.DenyReason)</td><td>@item.DenyReason</td></tr>
                     <tr><td>@Html.DisplayNameFor(model => model.Order.ProductId)</td><td>@item.ProductId</td></tr>
-                    <tr><td>@Html.DisplayNameFor(model => model.Order.UnitPrice)</td><td>以物易物</td></tr>
+                    @if (item.Trade == "金錢")
+                    {
+                        <tr><td>@Html.DisplayNameFor(model => model.Order.UnitPrice)</td><td>@item.UnitPrice</td></tr>
+                    }
+                    else if (item.Trade == "以物易物")
+                    {
+                        <tr><td>@Html.DisplayNameFor(model => model.Order.Trade)</td><td>@item.Trade</td></tr>
+                    }
                     <tr><td>@Html.DisplayNameFor(model => model.Order.Status)</td><td>@item.Status</td></tr>
                 </table>
                 <div class="action d-flex flex-row flex-md-column justify-content-between align-items-center">
                     <a href="@Url.Action("Details", "Seller", new {ProductId = item.ProductId})" class="btn btn-info mt-2"><i class="bi bi-info-circle"></i> 詳情</a>
+                    <a href="@Url.Action("OrderDetails", "Seller", new {OrderId = item.OrderId, trade = ViewBag.trade})" class="btn btn-info mt-2"><i class="bi bi-info-circle"></i> 訂單確認</a>
                     @*@if (item.Status == "已上架" || item.Status == "未上架")
                     {
                         <a href="@Url.Action("Edit", "Seller", new {ProductId = item._ProductId})" class="btn btn-warning mt-2"><i class="bi bi-pencil-square"></i> 編輯</a>
